feat: Update Hero and HeroBackground components to support fallback images and enhance image handling; improve getHeroImages function for better image management.

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -59,7 +59,7 @@
       "websiteLabel": "Webové stránky {name}",
       "prague": {
         "name": "Bonfire@Prague",
-        "description": "Naše hlavní základna v srdci Prahy. Meetupy s přednáškami od lokálních i zahraničních hostů."
+        "description": "Naše hlavní pražská zastávka v srdci metropole. Meetupy s přednáškami od lokálních i zahraničních hostů."
       },
       "zlin": {
         "name": "Bonfire@Zlin",
