--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -59,7 +59,7 @@
       "websiteLabel": "{name} website",
       "prague": {
         "name": "Bonfire@Prague",
-        "description": "Our flagship location in the heart of Czech Republic's capital. Meetups featuring talks from local and international game developers."
+        "description": "Our main Prague venue in the heart of the Czech capital, with meetups featuring talks from local and international game developers."
       },
       "zlin": {
         "name": "Bonfire@Zlin",
