feat: Add MobileBackButton component for improved navigation; dynamically import EventsSection and RecordingsCatalog for optimized loading; update Header links and translations for better user experience.

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -1,8 +1,10 @@
 {
   "header": {
+    "home": "Dom\u016f",
     "events": "Akce",
     "library": "Knihovna",
     "locations": "Lokace",
+    "back": "Zp\u011bt",
     "logoAlt": "Logo Bonfire Events"
   },
   "hero": {
