--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -1,8 +1,10 @@
 {
   "header": {
+    "home": "Home",
     "events": "Events",
     "library": "Library",
     "locations": "Locations",
+    "back": "Back",
     "logoAlt": "Bonfire Events logo"
   },
   "hero": {
