feat: Add share functionality to RecordingPlayer component with social media links; enhance UI with new icons and update localization for share-related labels.

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -98,7 +98,10 @@
     "relatedTitle": "Mohlo by tě zajímat",
     "back": "Zpět",
     "epShort": "Ep.",
-    "special": "Speciál"
+    "special": "Speciál",
+    "share": "Sdílet",
+    "copyLink": "Kopírovat odkaz",
+    "copied": "Zkopírováno!"
   },
   "libraryPage": {
     "eyebrow": "Pusť si to zpětně",
