feat: Enhance RecordingPlayer with mini player functionality and responsive design improvements

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -91,6 +91,7 @@
     "backToLibrary": "Zpátky do knihovny",
     "cinema": "Kino režim",
     "exitCinema": "Zrušit kino",
+    "nextUp": "Další na řadě",
     "locationLabel": "Místo: {location}",
     "speaker": "Mluvčí",
     "date": "Datum",
