feat: Update likes feature for video recordings with API endpoints for counting and managing likes

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -103,7 +103,7 @@
     "share": "Sdílet",
     "copyLink": "Kopírovat odkaz",
     "copied": "Zkopírováno!",
-    "like": "Líbí se mi",
+    "like": "Jiskra",
     "returnToPlayer": "Zpět k přehrávači",
     "closePlayer": "Zavřít přehrávač"
   },
