--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -103,7 +103,7 @@
     "share": "Share",
     "copyLink": "Copy link",
     "copied": "Copied!",
-    "like": "Like",
+    "like": "Spark",
     "returnToPlayer": "Return to player",
     "closePlayer": "Close player"
   },
